# AlgorithmPractice

./: .gitignore  .travis.yml
cpp/: CMakeLists.txt  PrintPretty.cpp  bitset.cpp  deque.cpp  lowerBound.cpp  map.cpp  matrix.cpp  vectorErase.cpp  virtualfunctions.cpp
hackerrank/: build.py
hackerrank/cpp/: CMakeLists.txt  Complex.cpp  Set.cpp  VariableSizedArrays.cpp  attributeparser.cpp  box.cpp  class.cpp  classObject.cpp  classTemplateSpec.cpp  deque.cpp  inheritedCode.cpp  magicSpells.cpp  server.cpp  stringstream.cpp  template.cpp  templateSpec.cpp  vectorSort.cpp  workshops.cpp
hackerrank/py/linear_algebra/: find_point.py  maxinum_draws.py
hackerrank/shell/bash/: H_arith.sh  H_average.sh  H_comparing_numbers.sh  H_condition.sh  H_moreCondition.sh
hackerrank/src/: H_A_01.java  H_BalancedTress_AVL.java  H_DoubleLinkedList.java  H_Heap_FindMedian.java  H_Heap_MinAverageWaitingTime.java  H_Huffman.java  H_InsertANodeAtTheTailOfALinkedList.java  H_Queue_DownToZeroII.java  H_Queue_JesseAndCookies.java  H_Queue_TruckTour.java  H_SWAP_NODES_ALGO.java  H_Stack_PoisonousPlants.java  H_Tree.java  Main.java
hackerrank/src/Leecode/: AllNodesDistanceKinBinaryTree.java  BestTimeToBuyAndSellStock.java  ClimbingStairs.java  Codec.java  DivisorGama.java  HouseRobber.java  IsSubsequence.java  KthLargest.java  KthLargestInAnArray.java  KthLargestInAnArray2.java  MagicDictionary.java  MapSum.java  MatrixBlockSum.java  MaximumSubarray.java  MinCostClimBingStairs.java  MinStack.java  MinimumTimeVisitingAllPoints.java  MyHashMap.java  MyHashSet.java  MyLinkedList.java  MyQueue.java  MyStack.java  NumArray.java  PaintFence.java  PaintHouse.java  PrintImmutableLinkedListInReverse.java  Pro_973.java  Prob1042.java  Prob1043.java  Prob1059.java  Prob1135.java  Prob1136.java  Prob1161.java  Prob1162.java  Prob1203.java  Prob1267.java  Prob1282.java  Prob1306.java  Prob1320.java  Prob133.java  (+343 more)
hackerrank/src/algo/: A_Implementation_LarryasArray.java  H_DynamicProgramming_FibnacciModified.java  H_GraphTheory_Bfs.java  H_Implementatino_AcmIcpcTeam.java  H_Implementation_AngryProfessor.java  H_Implementation_BearAndSteadyGene.java  H_Implementation_CaesarCiper.java  H_Implementation_CavityMap.java  H_SimpleArraySum.java  (+34 more)
hackerrank/test/: ExchangeTest.java
(+211 files in other folders)
